Annotate RemoteImageDecoderAVFProxy endpoints with MediaPLaybackEnabled https://bugs.webkit.org/show_bug.cgi?id=284404 rdar://141243408
Reviewed by Youenn Fablet.

Annotate RemoteImageDecoderAVFProxy endpoints with MediaPLaybackEnabled

* Source/WebKit/GPUProcess/media/RemoteImageDecoderAVFProxy.cpp:
(WebKit::RemoteImageDecoderAVFProxy::sharedPreferencesForWebProcess const):
* Source/WebKit/GPUProcess/media/RemoteImageDecoderAVFProxy.h:
* Source/WebKit/GPUProcess/media/RemoteImageDecoderAVFProxy.messages.in:

Canonical link: https://commits.webkit.org/287982@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -7882,6 +7882,7 @@ UseGPUProcessForMediaEnabled:
     WebKit:
       "ENABLE(GPU_PROCESS_BY_DEFAULT)": true
       default: false
+  sharedPreferenceForWebProcess: true
 
 UseGPUProcessForWebGLEnabled:
   type: bool
