--- a/Source/WebKit/GPUProcess/media/RemoteImageDecoderAVFProxy.messages.in
+++ b/Source/WebKit/GPUProcess/media/RemoteImageDecoderAVFProxy.messages.in
@@ -28,9 +28,9 @@
 #if ENABLE(GPU_PROCESS) && HAVE(AVASSETREADER)
 
 [
-    ExceptionForEnabledBy,
     DispatchedFrom=WebContent,
-    DispatchedTo=GPU
+    DispatchedTo=GPU,
+    EnabledBy=UseGPUProcessForMediaEnabled && MediaPlaybackEnabled
 ]
 messages -> RemoteImageDecoderAVFProxy {
     CreateDecoder(IPC::SharedBufferReference data, String mimeType) -> (std::optional<WebCore::ImageDecoderIdentifier> identifier) Synchronous
