[iOS] [WebKit] Prepare to enable "Visually Contiguous Bidi Selection" default https://bugs.webkit.org/show_bug.cgi?id=284851 rdar://141401866
Reviewed by Abrar Rahman Protyasha.

Enable this behavior by default, when `defaultVisuallyContiguousBidiTextSelectionEnabled()` returns
`true`.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebKit/Shared/WebPreferencesDefaultValues.h:
* Source/WebKit/Shared/ios/WebPreferencesDefaultValuesIOS.mm:
(WebKit::defaultVisuallyContiguousBidiTextSelectionEnabled):

Canonical link: https://commits.webkit.org/287983@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -8266,10 +8266,10 @@ VisuallyContiguousBidiTextSelectionEnabled:
   status: internal
   humanReadableName: "Visually Contiguous Bidi Selection"
   humanReadableDescription: "Visually contiguous bidi selection"
-  conditional: PLATFORM(IOS_FAMILY)
+  condition: PLATFORM(IOS_FAMILY)
   defaultValue:
     WebKit:
-      default: false
+      default: WebKit::defaultVisuallyContiguousBidiTextSelectionEnabled()
     WebKitLegacy:
       default: false
     WebCore:
