Annotate RemoteAudioMediaStreamTrackRendererInternalUnitManager endpoints with MediaStreamEnabled https://bugs.webkit.org/show_bug.cgi?id=283756 rdar://140622891
Reviewed by Youenn Fablet.

Annotate RemoteAudioMediaStreamTrackRendererInternalUnitManager endpoints with MediaStreamEnabled

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebKit/GPUProcess/webrtc/RemoteAudioMediaStreamTrackRendererInternalUnitManager.cpp:
(WebKit::RemoteAudioMediaStreamTrackRendererInternalUnitManager::sharedPreferencesForWebProcess const):
* Source/WebKit/GPUProcess/webrtc/RemoteAudioMediaStreamTrackRendererInternalUnitManager.h:
* Source/WebKit/GPUProcess/webrtc/RemoteAudioMediaStreamTrackRendererInternalUnitManager.messages.in:

Canonical link: https://commits.webkit.org/287986@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -5128,6 +5128,7 @@ MediaStreamEnabled:
       default: true
     WebCore:
       default: true
+  sharedPreferenceForWebProcess: true
 
 MediaStreamTrackProcessingEnabled:
   type: bool
