Annotate endpoints with MediaControlsContextMenuEnabled https://bugs.webkit.org/show_bug.cgi?id=284770 rdar://141561768
Reviewed by Youenn Fablet.

Annotate endpoints with MediaControlsContextMenuEnabled

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebKit/UIProcess/WebPageProxy.messages.in:

Canonical link: https://commits.webkit.org/287993@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -4854,6 +4854,7 @@ MediaControlsContextMenusEnabled:
       default: true
     WebCore:
       default: false
+  sharedPreferenceForWebProcess: true
 
 MediaControlsScaleWithPageZoom:
   type: bool
