Move MediaRecorderPrivateWriterAVFObjC to GPU process https://bugs.webkit.org/show_bug.cgi?id=284705 rdar://141503370
Reviewed by Youenn Fablet.

On iOS, the AVAssetWriter can't run in the Web Process as it is blocked by the sandbox.
We need to move it to the more priviledged GPU process.

We add a MediaStrategy createMediaRecorderPrivateWriter which will return a
RemoteMediaRecorderPrivateWriter.
MediaRecorderPrivateWriter requests will be handled by the RemoteMediaRecorderPrivateWriterManager
which keeps a map of RemoteMediaRecorderPrivateWriterProxy the communictates with their
MediaRecorderPrivateWriterAVFObjC.
The muxed data is then returned to the content proceess's MediaRecorder object.

Communication between the RemoteMediaRecorderPrivateWriter and its RemoteMediaRecorderPrivateWriterProxy
is asynchronous except on setup where we use a sync call to create the tracks.

No change in observable behaviours. Covered by existing tests.

* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/platform/MediaSample.h:
* Source/WebCore/platform/MediaStrategy.cpp:
(WebCore::MediaStrategy::createMediaRecorderPrivateWriter const):
* Source/WebCore/platform/MediaStrategy.h:
* Source/WebCore/platform/mediarecorder/MediaRecorderPrivateWriter.cpp:
(WebCore::MediaRecorderPrivateWriter::create):
* Source/WebKit/CMakeLists.txt:
* Source/WebKit/DerivedSources-input.xcfilelist:
* Source/WebKit/DerivedSources-output.xcfilelist:
* Source/WebKit/DerivedSources.make:
* Source/WebKit/GPUProcess/GPUConnectionToWebProcess.cpp:
(WebKit::GPUConnectionToWebProcess::allowsExitUnderMemoryPressure const):
(WebKit::GPUConnectionToWebProcess::remoteMediaRecorderPrivateWriterManager):
(WebKit::GPUConnectionToWebProcess::protectedRemoteMediaRecorderPrivateWriterManager):
(WebKit::GPUConnectionToWebProcess::dispatchMessage):
(WebKit::GPUConnectionToWebProcess::dispatchSyncMessage):
* Source/WebKit/GPUProcess/GPUConnectionToWebProcess.h:
* Source/WebKit/GPUProcess/media/RemoteMediaReco

--- a/Source/WebKit/CMakeLists.txt
+++ b/Source/WebKit/CMakeLists.txt
@@ -419,6 +419,7 @@ set(WebKit_SERIALIZATION_IN_FILES
     GPUProcess/media/InitializationSegmentInfo.serialization.in
     GPUProcess/media/MediaDescriptionInfo.serialization.in
     GPUProcess/media/RemoteMediaPlayerProxyConfiguration.serialization.in
+    GPUProcess/media/RemoteTrackInfo.serialization.in
     GPUProcess/media/TextTrackPrivateRemoteConfiguration.serialization.in
     GPUProcess/media/TrackPrivateRemoteConfiguration.serialization.in
     GPUProcess/media/VideoTrackPrivateRemoteConfiguration.serialization.in
