Prepare AVAudioSessionCaptureDeviceManager for speaker selection rdar://141435061 https://bugs.webkit.org/show_bug.cgi?id=284629
Reviewed by Eric Carlson.

Update AudioMediaStreamTrackRendererUnit so that we store the last used speaker of a page.
We then use that speaker on iOS for all audio of that page.
We add special support for the receiver speaker since this is handled by category option.

In addition, AVAudioSessionCaptureDeviceManager will be the place to set the preferred speaker.
In GPU process, the various players will all go to the AudioSessionProxy to give their preferred speaker.
The speaker will be used when the AudioSessionProxy gets activated.
This allows several pages to use different speakers without interferring with each other as long as they are not playing audio at the same time.

* Source/WebCore/platform/audio/ios/AudioSessionIOS.h:
* Source/WebCore/platform/audio/ios/AudioSessionIOS.mm:
(WebCore::AudioSessionIOS::setCategory):
* Source/WebCore/platform/mediastream/cocoa/AudioMediaStreamTrackRendererInternalUnit.h:
(WebCore::AudioMediaStreamTrackRendererInternalUnit::setLastDeviceUsed):
* Source/WebCore/platform/mediastream/cocoa/AudioMediaStreamTrackRendererUnit.cpp:
(WebCore::AudioMediaStreamTrackRendererUnit::supportsPerDeviceRendering):
(WebCore::AudioMediaStreamTrackRendererUnit::setLastDeviceUsed):
(WebCore::AudioMediaStreamTrackRendererUnit::ensureDeviceUnit):
(WebCore::AudioMediaStreamTrackRendererUnit::getDeviceUnit):
(WebCore::AudioMediaStreamTrackRendererUnit::addSource):
(WebCore::AudioMediaStreamTrackRendererUnit::removeSource):
(WebCore::AudioMediaStreamTrackRendererUnit::addResetObserver):
(WebCore::AudioMediaStreamTrackRendererUnit::retrieveFormatDescription):
(WebCore::AudioMediaStreamTrackRendererUnit::Unit::setLastDeviceUsed):
* Source/WebCore/platform/mediastream/cocoa/AudioMediaStreamTrackRendererUnit.h:
* Source/WebCore/platform/mediastream/cocoa/IncomingAudioMediaStreamTrackRendererUnit.cpp:
(WebCore::IncomingAudioMedia

--- a/Source/WebKit/GPUProcess/webrtc/RemoteAudioMediaStreamTrackRendererInternalUnitManager.messages.in
+++ b/Source/WebKit/GPUProcess/webrtc/RemoteAudioMediaStreamTrackRendererInternalUnitManager.messages.in
@@ -34,6 +34,8 @@ messages -> RemoteAudioMediaStreamTrackRendererInternalUnitManager {
 
     StartUnit(WebKit::AudioMediaStreamTrackRendererInternalUnitIdentifier identifier, struct WebKit::ConsumerSharedCARingBufferHandle storageHandle, IPC::Semaphore renderSemaphore)
     StopUnit(WebKit::AudioMediaStreamTrackRendererInternalUnitIdentifier identifier)
+
+    SetLastDeviceUsed(String deviceID)
 }
 
 #endif
