The Overlay Regions flag should be on WKPreferences and not WKWebViewConfiguration https://bugs.webkit.org/show_bug.cgi?id=284574 <rdar://134291686>
Reviewed by Mike Wyrzykowski.

Move from a WKWebViewConfiguration flag to a (testable) preference.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebKit/UIProcess/API/Cocoa/WKPreferences.h:
* Source/WebKit/mac/replace-webkit-additions-includes.py:
* Source/WebKit/UIProcess/API/Cocoa/WKPreferences.mm:
(-[WKPreferences _setOverlayRegionsEnabled:]):
(-[WKPreferences _overlayRegionsEnabled]):
* Source/WebKit/UIProcess/API/Cocoa/WKPreferencesPrivate.h:
Add the new preference and a WKA extension point.

* Source/WebKit/UIProcess/API/APIPageConfiguration.h:
(API::PageConfiguration::overlayRegionsEnabled const): Deleted.
(API::PageConfiguration::setOverlayRegionsEnabled): Deleted.
* Source/WebKit/UIProcess/API/Cocoa/WKWebViewConfiguration.mm:
(-[WKWebViewConfiguration encodeWithCoder:]):
(-[WKWebViewConfiguration initWithCoder:]):
(-[WKWebViewConfiguration _overlayRegionsEnabled]): Deleted.
(-[WKWebViewConfiguration _setOverlayRegionsEnabled:]): Deleted.
* Source/WebKit/UIProcess/API/Cocoa/WKWebViewConfigurationPrivate.h:
* Tools/WebKitTestRunner/cocoa/TestControllerCocoa.mm:
(WTR::initializeWebViewConfiguration):
Remove the WKWebViewConfiguration flag.

* Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm:
(-[WKWebView _didCommitLayerTree:]):
(-[WKWebView _updateOverlayRegionsForCustomContentView]):
Switch from checking the Configuration to checking the Preference.

* LayoutTests/overlay-region/fixed-node-updates.html:
* LayoutTests/overlay-region/fixed-overlay-drawn-rect.html:
* LayoutTests/overlay-region/many-candidates.html:
* LayoutTests/overlay-region/map.html:
* LayoutTests/overlay-region/split-scrollers.html:
Prepare the tests for when we'll turn the compile time flag on.

Canonical link: https://commits.webkit.org/288012@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -5590,6 +5590,19 @@ OverlappingBackingStoreProvidersEnabled:
     WebCore:
       default: true
 
+OverlayRegionsEnabled:
+  type: bool
+  status: testable
+  category: dom
+  humanReadableName: "Overlay Regions"
+  humanReadableDescription: "Generate and visualize overlay regions"
+  condition: ENABLE(OVERLAY_REGIONS_IN_EVENT_REGION)
+  webcoreBinding: none
+  exposed: [ WebKit ]
+  defaultValue:
+    WebKit:
+      default: false
+
 OverscrollBehaviorEnabled:
   type: bool
   status: stable
