[ResourceMonitor] Send ContentRuleList of Checker from UIProcess to WebProcess. https://bugs.webkit.org/show_bug.cgi?id=284694 rdar://141645827
Reviewed by Ben Nham.

Every web content process has its own checker. They share same content rule list which is mapped file to be
shared among the processes. We need to send the list from UIProcess that initialize the rule list to web
content process where ResourceMonitorChecker is running in it.

In this patch, actual preparation of rule list is not included.

* Source/WebCore/Headers.cmake:
* Source/WebCore/loader/ResourceMonitorChecker.h:
* Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::platformLoadResourceMonitorRuleList):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::loadRequest):
(WebKit::WebPageProxy::loadRequestWithNavigationShared):
* Source/WebKit/UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::cachedResourceMonitorRuleList):
(WebKit::WebProcessPool::loadOrUpdateResourceMonitorRuleList):
(WebKit::WebProcessPool::platformLoadResourceMonitorRuleList):
* Source/WebKit/UIProcess/WebProcessPool.h:
* Source/WebKit/UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::requestResourceMonitorRuleLists):
(WebKit::WebProcessProxy::setResourceMonitorRuleListsIfRequired):
* Source/WebKit/UIProcess/WebProcessProxy.h:
* Source/WebKit/WebProcess/WebProcess.cpp:
(WebKit::WebProcess::setResourceMonitorContentRuleList):
* Source/WebKit/WebProcess/WebProcess.h:
* Source/WebKit/WebProcess/WebProcess.messages.in:

Canonical link: https://commits.webkit.org/288017@main

--- a/Source/WebKit/WebProcess/WebProcess.messages.in
+++ b/Source/WebKit/WebProcess/WebProcess.messages.in
@@ -229,4 +229,8 @@ messages -> WebProcess : AuxiliaryProcess WantsAsyncDispatchMessage {
     PostNotification(String message, std::optional<uint64_t> state)
     PostObserverNotification(String message)
 #endif
+
+#if ENABLE(CONTENT_EXTENSIONS)
+    [DeferSendingIfSuspended] SetResourceMonitorContentRuleList(WebKit::WebCompiledContentRuleListData ruleListData)
+#endif
 }
