Provide an attribute on <model> that toggles the portal https://bugs.webkit.org/show_bug.cgi?id=284670 rdar://141197697
Reviewed by Ada Chan and Ryosuke Niwa.

Provide an attribute on <model> that toggles the portal. In addition, exposes
extra properties on WKPreferences so that only web views that opt in model
process and non portaled model can have the 'noportal' attribute functional.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebCore/Modules/model-element/HTMLModelElement.cpp:
(WebCore::HTMLModelElement::createModelPlayer):
(WebCore::HTMLModelElement::attributeChanged):
(WebCore::HTMLModelElement::portal const):
(WebCore::HTMLModelElement::updatePortal):
* Source/WebCore/Modules/model-element/HTMLModelElement.h:
* Source/WebCore/Modules/model-element/ModelPlayer.cpp:
(WebCore::ModelPlayer::setHasPortal):
* Source/WebCore/Modules/model-element/ModelPlayer.h:
Default behavior is keeping the portal.

* Source/WebCore/html/HTMLAttributeNames.in:
noportal is the attribute name

* Source/WebKit/ModelProcess/cocoa/ModelProcessModelPlayerProxy.h:
* Source/WebKit/ModelProcess/cocoa/ModelProcessModelPlayerProxy.messages.in:
* Source/WebKit/ModelProcess/cocoa/ModelProcessModelPlayerProxy.mm:
(WebKit::ModelProcessModelPlayerProxy::createLayer):
(WebKit::ModelProcessModelPlayerProxy::computeTransform):
(WebKit::ModelProcessModelPlayerProxy::updatePortalAndClipping):
Update key paths for portal and clipping. This will be fully functional until
rdar://141457267 (Remove clipping when <model> doesn't have a portal).
Currently, it's blocked on clipping not toggle-able.

(WebKit::ModelProcessModelPlayerProxy::setHasPortal):
* Source/WebKit/UIProcess/API/Cocoa/WKPreferences.mm:
(-[WKPreferences _setModelElementEnabled:]):
(-[WKPreferences _modelProcessEnabled]):
(-[WKPreferences _setModelProcessEnabled:]):
(-[WKPreferences _modelElementEnabled]):
(-[WKPreferences _setNonPortaledModelEnabled:]):
(-[WKPreferences _nonPortaledModelEnabled]):
* Source/WebKit/

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -5286,6 +5286,21 @@ ModelElementEnabled:
   disableInLockdownMode: true
   sharedPreferenceForWebProcess: true
 
+ModelNoPortalAttributeEnabled:
+  type: bool
+  status: unstable
+  condition: PLATFORM(VISION) && ENABLE(MODEL_PROCESS)
+  humanReadableName: "Model noportal attribute"
+  humanReadableDescription: "Enable Model noportal attribute support"
+  defaultValue:
+    WebKitLegacy:
+      default: false
+    WebKit:
+      default: false
+    WebCore:
+      default: false
+  disableInLockdownMode: true
+
 ModelProcessEnabled:
   type: bool
   status: unstable
