--- a/Source/WebCore/page/ProcessSyncData.in
+++ b/Source/WebCore/page/ProcessSyncData.in
@@ -56,7 +56,8 @@
 #   - A header required to declare/define the type
 #   - Opting in to automatic inclusion in the "DocumentSyncData" struct
 
-MainFrameURLChange : URL [Header=<wtf/URL.h>]
 AudioSessionType : WebCore::DOMAudioSessionType [DocumentSyncData Conditional=ENABLE(DOM_AUDIO_SESSION) Header="DOMAudioSession.h"]
 IsAutofocusProcessed : bool [DocumentSyncData]
 UserDidInteractWithPage : bool [DocumentSyncData]
+DocumentURL : URL [DocumentSyncData Header=<wtf/URL.h>]
+DocumentSecurityOrigin : RefPtr<WebCore::SecurityOrigin> [DocumentSyncData Header="SecurityOrigin.h"]
