--- a/Source/WebKit/Configurations/BaseTarget.xcconfig
+++ b/Source/WebKit/Configurations/BaseTarget.xcconfig
@@ -28,7 +28,7 @@ FRAMEWORK_SEARCH_PATHS = "$(SDK_DIR)$(UMBRELLA_FRAMEWORKS_DIR)";
 
 // On internal SDKs, try /System/Library/Frameworks first to work around rdar://134956870.
 SYSTEM_FRAMEWORK_SEARCH_PATHS = $(SYSTEM_FRAMEWORK_SEARCH_PATHS_134956870_$(USE_INTERNAL_SDK)) $(inherited) $(WK_PRIVATE_SDK_DIR)$(SYSTEM_LIBRARY_DIR)/PrivateFrameworks;
-SYSTEM_FRAMEWORK_SEARCH_PATHS_134956870_YES = $(SYSTEM_PREFIX)$(SDK_DIR)$(SYSTEM_LIBRARY_DIR)/Frameworks;
+SYSTEM_FRAMEWORK_SEARCH_PATHS_134956870_YES = $(SDK_DIR)$(SYSTEM_PREFIX)$(SYSTEM_LIBRARY_DIR)/Frameworks;
 
 WK_FORMATREADERBUNDLE_CODESIGNING_DEFINES = ENABLE_LOWER_FORMATREADERBUNDLE_CODESIGNING_REQUIREMENTS;
 WK_FORMATREADERBUNDLE_CODESIGNING_DEFINES[config=Production] = ;
