Autogenerate process sync'ing of DocumentClass rdar://141713881 https://bugs.webkit.org/show_bug.cgi?id=284909
Reviewed by Alex Christensen.

This is necessary for answering other topDocument questions in the future,
but can directly be used today to answer "is top document an SVG document".

* Source/WebCore/Scripts/generate-process-sync-data.py:
(generate_process_sync_data_header):
(main):
* Source/WebCore/Scripts/tests/DocumentSyncData.cpp:
(WebCore::DocumentSyncData::update):
(WebCore::DocumentSyncData::DocumentSyncData):
* Source/WebCore/Scripts/tests/DocumentSyncData.h:
* Source/WebCore/Scripts/tests/ProcessSyncClient.cpp:
(WebCore::ProcessSyncClient::broadcastMainFrameURLChangeToOtherProcesses):
(WebCore::ProcessSyncClient::broadcastUserDidInteractWithPageToOtherProcesses):
* Source/WebCore/Scripts/tests/ProcessSyncClient.h:
* Source/WebCore/Scripts/tests/ProcessSyncData.h:
* Source/WebCore/Scripts/tests/ProcessSyncData.serialization.in:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/cssjit/SelectorCompiler.cpp:
(WebCore::SelectorCompiler::testIsHTMLClassOnDocument):
* Source/WebCore/dom/Document.cpp:
(WebCore::m_syncData):
(WebCore::Document::populateDocumentSyncDataForNewlyConstructedDocument):
* Source/WebCore/dom/Document.h:
* Source/WebCore/dom/DocumentClasses.h: Added.
* Source/WebCore/page/Page.cpp:
(WebCore::Page::topDocumentHasDocumentClass const):
(WebCore::Page::updateProcessSyncData):
* Source/WebCore/page/Page.h:
* Source/WebCore/page/ProcessSyncData.in:
* Source/WebCore/svg/SVGElement.cpp:
(WebCore::SVGElement::title const):
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:

Canonical link: https://commits.webkit.org/288092@main

--- a/Source/WebCore/page/ProcessSyncData.in
+++ b/Source/WebCore/page/ProcessSyncData.in
@@ -61,3 +61,4 @@ IsAutofocusProcessed : bool [DocumentSyncData]
 UserDidInteractWithPage : bool [DocumentSyncData]
 DocumentURL : URL [DocumentSyncData Header=<wtf/URL.h>]
 DocumentSecurityOrigin : RefPtr<WebCore::SecurityOrigin> [DocumentSyncData Header="SecurityOrigin.h"]
+DocumentClasses : OptionSet<WebCore::DocumentClass> [DocumentSyncData Header="DocumentClasses.h"]
