Prepare Skia build for PlayStation https://bugs.webkit.org/show_bug.cgi?id=284927
Reviewed by Adrian Perez de Castro and Carlos Alberto Lopez Perez.

Modify the Skia build to target PlayStation. Make the encoders within Skia
optional. Modify the build to target the correct EGL.

Use a namespaced Skia::Skia target within the CMake files to fit conventions.
Clean up some includes and centralize platform headers.

* Source/ThirdParty/skia/CMakeLists.txt:
* Source/WebCore/platform/Skia.cmake:
* Source/WebCore/platform/graphics/skia/FontCacheSkia.cpp:
* Source/WebKit/PlatformWin.cmake:
* Source/WebKit/Platform/Skia.cmake:
* Source/WebKit/UIProcess/skia/BackingStoreSkia.cpp:
* Source/cmake/OptionsPlayStation.cmake:
* Source/cmake/WebKitFeatures.cmake:
* Tools/ImageDiff/Skia.cmake:
* Tools/wpe/backends/CMakeLists.txt:

Canonical link: https://commits.webkit.org/288094@main

--- a/Tools/wpe/backends/CMakeLists.txt
+++ b/Tools/wpe/backends/CMakeLists.txt
@@ -27,7 +27,7 @@ if (USE_CAIRO)
     list(APPEND WPEToolingBackends_PRIVATE_LIBRARIES Cairo::Cairo)
     list(APPEND WPEToolingBackends_PRIVATE_DEFINITIONS USE_CAIRO=1)
 elseif (USE_SKIA)
-    list(APPEND WPEToolingBackends_PRIVATE_LIBRARIES Skia)
+    list(APPEND WPEToolingBackends_PRIVATE_LIBRARIES Skia::Skia)
     list(APPEND WPEToolingBackends_PRIVATE_DEFINITIONS USE_SKIA=1)
 endif ()
 
