Make DeprecatedGlobalSettings::builtInNotificationsEnabled() match web preferences value https://bugs.webkit.org/show_bug.cgi?id=284913 rdar://141647594
Reviewed by Ben Nham.

287881@main annotates message endpoints with feature flag BuiltInNotificationsEnabled and we started to see some crash
in testing builds, indicating message is received by network process when feature flag is off. This is because web
process is sending the message based on the feature flag value in DeprecatedGlobalSettings, while network process
validates the message with feature flag value in WebPreferences. Normally, these two value should match, but
DeprecatedGlobalSettings::builtInNotificationsEnabled() has a special conditin to get default value from system (
see 282333@main). To fix the crash, this patch makes WebPreferences get the default value from system, and
DeprecatedGlobalSettings value will always match WebPreferences value.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebCore/page/DeprecatedGlobalSettings.cpp:
(WebCore::DeprecatedGlobalSettings::builtInNotificationsEnabled):
* Source/WebKit/Shared/WebPreferencesDefaultValues.cpp:
(WebKit::defaultBuiltInNotificationsEnabled):
* Source/WebKit/Shared/WebPreferencesDefaultValues.h:

Canonical link: https://commits.webkit.org/288101@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -1067,7 +1067,7 @@ BuiltInNotificationsEnabled:
     WebCore:
       default: false
     WebKit:
-      default: false
+      default: defaultBuiltInNotificationsEnabled()
   sharedPreferenceForWebProcess: true
   richJavaScript: true
 
