[Site isolation] Snapshotting should be composited in GPUProcess and sent directly to UIProcess https://bugs.webkit.org/show_bug.cgi?id=284427 rdar://141254954
Reviewed by Matt Woodrow.

Site isolation puts a hard restriction on snapshotting. No WebContent process
is allowed to see the drawing of another remote frame drawing including the main
frame WebContent process. So the drawing of all frames will happen in GPUProcess
and the result will be sent directly to UIProcess.

The plan is to make all the remote frames draw their contents asynchronously into
separate DisplayLists in GPUProcess and then composite all these DisplayLists to
a PDFDocument or to an ShareableBitmap. This final result will sent directly to
UIProcess.

This PR is a step towards achieving this plan for site-isolation. In this PR the
main frame will be only snapshotted in GPUProcess and the result PDF SharedBuffer
will be sent to UIProcess.

The current workflow for PDF snapshotting when site-isolation = off is:

1. [WKWebView createPDFWithConfiguration] calls WebPageProxy::drawToPDF and sends
   a callback to be executed once WebProcess replies back.
2. WebPageProxy::drawToPDF sends the message WebPage::DrawToPDF to the main frame
   WebProcess.
3. WebPage::drawToPDF creates a local ImageBuffer with PDFDocument backend. Then
   it draws the main frame into this ImageBuffer.
4. Once the drawing is finished, the ImageBuffer is sunk into a SharedBuffer which
   holds the PDFDocument. The SharedBuffer is sent back to UIProcess through the
   completion handler.
5. UIProcess receives the ShareBuffer back from WebProcess and runs the callback
   which saves the returned buffer to an external file.

The new workflow for PDF snapshotting when site-isolation = on is:

1. [WKWebView createPDFWithConfiguration] calls WebPageProxy::drawCompositedToPDF()
   and sends a callback to be executed once WebProcess replies back.
2. WebPageProxy::drawCompositedToPDF() generates a new SnapshotIdentifier and adds
   t

--- a/Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.messages.in
+++ b/Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.messages.in
@@ -1,4 +1,4 @@
-# Copyright (C) 2020-2023 Apple Inc. All rights reserved.
+# Copyright (C) 2020-2024 Apple Inc. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
@@ -62,6 +62,10 @@ messages -> RemoteRenderingBackend Stream {
 
     MoveToSerializedBuffer(WebCore::RenderingResourceIdentifier sourceImageBuffer)
     MoveToImageBuffer(WebCore::RenderingResourceIdentifier destinationImageBuffer)
+
+#if PLATFORM(COCOA)
+    DidDrawCompositedToPDF(WebCore::PageIdentifier pageID, WebCore::RenderingResourceIdentifier imageBufferIdentifier, WebCore::SnapshotIdentifier snapshotIdentifier)
+#endif
 
     [EnabledBy=ShapeDetection] CreateRemoteBarcodeDetector(WebKit::ShapeDetectionIdentifier identifier, WebCore::ShapeDetection::BarcodeDetectorOptions barcodeDetectorOptions) AllowedWhenWaitingForSyncReply
     [EnabledBy=ShapeDetection] ReleaseRemoteBarcodeDetector(WebKit::ShapeDetectionIdentifier identifier) AllowedWhenWaitingForSyncReply
