[Materials] Add rendering support for blur effects https://bugs.webkit.org/show_bug.cgi?id=284729 rdar://141527633
Reviewed by Simon Fraser.

Create and display `MTMaterialLayer`s when using `-apple-visual-effect` with
one of the `-apple-system-blur-` keywords. Note that this is not web-exposed.

`MTMaterialLayer`s are backdrop layers with a specific set of `CAFilter`s,
depending on the blur effect.

* LayoutTests/apple-visual-effects/apple-visual-effect-blur-material-chrome-expected.txt: Added.
* LayoutTests/apple-visual-effects/apple-visual-effect-blur-material-chrome.html: Added.
* LayoutTests/apple-visual-effects/apple-visual-effect-blur-material-expected.txt: Added.
* LayoutTests/apple-visual-effects/apple-visual-effect-blur-material-thick-expected.txt: Added.
* LayoutTests/apple-visual-effects/apple-visual-effect-blur-material-thick.html: Added.
* LayoutTests/apple-visual-effects/apple-visual-effect-blur-material-thin-expected.txt: Added.
* LayoutTests/apple-visual-effects/apple-visual-effect-blur-material-thin.html: Added.
* LayoutTests/apple-visual-effects/apple-visual-effect-blur-material-ultra-thin-expected.txt: Added.
* LayoutTests/apple-visual-effects/apple-visual-effect-blur-material-ultra-thin.html: Added.
* LayoutTests/apple-visual-effects/apple-visual-effect-blur-material.html: Added.
* LayoutTests/apple-visual-effects/backdrop-filter-with-apple-visual-effect-expected.html: Added.
* LayoutTests/apple-visual-effects/backdrop-filter-with-apple-visual-effect.html: Added.
* LayoutTests/platform/ios/apple-visual-effects/apple-visual-effect-blur-material-chrome-expected.txt: Added.
* LayoutTests/platform/ios/apple-visual-effects/apple-visual-effect-blur-material-expected.txt: Added.
* LayoutTests/platform/ios/apple-visual-effects/apple-visual-effect-blur-material-thick-expected.txt: Added.
* LayoutTests/platform/ios/apple-visual-effects/apple-visual-effect-blur-material-thin-expected.txt: Added.
* LayoutTests/platform/ios/apple-visual-effects/apple-visual-

--- a/Source/WebKit/Shared/RemoteLayerTree/RemoteLayerTree.serialization.in
+++ b/Source/WebKit/Shared/RemoteLayerTree/RemoteLayerTree.serialization.in
@@ -77,6 +77,9 @@ header: "RemoteLayerTreeTransaction.h"
     VisibleRectChanged
 #endif
     ContentsFormatChanged
+#if HAVE(CORE_MATERIAL)
+    AppleVisualEffectChanged
+#endif
 };
 
 header: "SwapBuffersDisplayRequirement.h"
@@ -275,6 +278,9 @@ headers: "LayerProperties.h" "PlatformCALayerRemote.h"
     [OptionalTupleBit=WebKit::LayerChange::VisibleRectChanged] WebCore::FloatRect visibleRect;
 #endif
     [OptionalTupleBit=WebKit::LayerChange::ContentsFormatChanged] WebCore::ContentsFormat contentsFormat;
+#if HAVE(CORE_MATERIAL)
+    [OptionalTupleBit=WebKit::LayerChange::AppleVisualEffectChanged] WebCore::AppleVisualEffect appleVisualEffect;
+#endif
 };
 
 using WebKit::LayerHostingContextID = uint32_t;
