--- a/Source/WebKit/Shared/Cocoa/WebCoreArgumentCodersCocoa.serialization.in
+++ b/Source/WebKit/Shared/Cocoa/WebCoreArgumentCodersCocoa.serialization.in
@@ -437,6 +437,9 @@ enum class WebCore::PlatformCALayerLayerType : uint8_t {
     LayerTypeAVPlayerLayer,
     LayerTypeContentsProvidedLayer,
     LayerTypeBackdropLayer,
+#if HAVE(CORE_MATERIAL)
+    LayerTypeMaterialLayer,
+#endif
     LayerTypeShapeLayer,
     LayerTypeScrollContainerLayer,
 #if ENABLE(MODEL_ELEMENT)
