Missing parenthesis for ENABLE_MODULE_VERIFIER in JavaScriptCore.xcconfig https://bugs.webkit.org/show_bug.cgi?id=284989 rdar://141788386
Reviewed by Keith Miller.

* Source/JavaScriptCore/Configurations/JavaScriptCore.xcconfig:

Canonical link: https://commits.webkit.org/288136@main

--- a/Source/JavaScriptCore/Configurations/JavaScriptCore.xcconfig
+++ b/Source/JavaScriptCore/Configurations/JavaScriptCore.xcconfig
@@ -24,7 +24,7 @@
 #include "BaseTarget.xcconfig"
 
 DEFINES_MODULE = YES;
-ENABLE_MODULE_VERIFIER = $(ENABLE_MODULE_VERIFIER_$(JSC_OVERRIDE_ENABLE_MODULE_VERIFIER);
+ENABLE_MODULE_VERIFIER = $(ENABLE_MODULE_VERIFIER_$(JSC_OVERRIDE_ENABLE_MODULE_VERIFIER));
 ENABLE_MODULE_VERIFIER_ = $(USE_INTERNAL_SDK);
 ENABLE_MODULE_VERIFIER_NO = NO;
 ENABLE_MODULE_VERIFIER_YES = YES;
