Unreviewed, update test262 config based on OSS WebKit https://bugs.webkit.org/show_bug.cgi?id=285001 rdar://141793932
* JSTests/test262/config.yaml:
* JSTests/test262/expectations.yaml:

Canonical link: https://commits.webkit.org/288139@main

--- a/JSTests/test262/config.yaml
+++ b/JSTests/test262/config.yaml
@@ -63,6 +63,19 @@ skip:
     # https://unicode-org.atlassian.net/browse/ICU-21367
     - test/intl402/Intl/getCanonicalLocales/unicode-ext-canonicalize-yes-to-true.js
 
+    # ICU needs public API for canonicalization
+    - test/intl402/Intl/getCanonicalLocales/canonicalized-tags.js
+    - test/intl402/Intl/getCanonicalLocales/complex-language-subtag-replacement.js
+    - test/intl402/Intl/getCanonicalLocales/complex-region-subtag-replacement.js
+    - test/intl402/Intl/getCanonicalLocales/grandfathered.js
+    - test/intl402/Intl/getCanonicalLocales/preferred-grandfathered.js
+    - test/intl402/Intl/getCanonicalLocales/transformed-ext-canonical.js
+    - test/intl402/Intl/getCanonicalLocales/unicode-ext-canonicalize-region.js
+    - test/intl402/Intl/getCanonicalLocales/unicode-ext-canonicalize-subdivision.js
+    - test/intl402/Locale/constructor-options-region-valid.js
+    - test/intl402/Locale/getters-grandfathered.js
+    - test/intl402/Locale/likely-subtags-grandfathered.js
+
     # Depends on Temporal.Duration relativeTo option
     - test/built-ins/Temporal/Duration/compare/basic.js
     - test/built-ins/Temporal/Duration/compare/calendar-possibly-required.js
