Add Third Party cookie blocking mode that allows partitioned cookies https://bugs.webkit.org/show_bug.cgi?id=284556 rdar://141361030
Reviewed by Sihui Liu.

We are currently lacking a third-party cookie blocking mode that blocks "third
party cookies" (i.e., first party cookies from a third-party context) while
allowing partitioned cookies - both creating and accessing. This patch
introduces a new mode that fills this gap.

Most of this patch is adapting the testing infrastructure to plumb the
information from a layout test.

* LayoutTests/http/tests/resourceLoadStatistics/only-partitioned-third-party-cookies.https-expected.txt: Added.
* LayoutTests/http/tests/resourceLoadStatistics/only-partitioned-third-party-cookies.https.html: Added.
* LayoutTests/http/tests/resourceLoadStatistics/resources/set-cookie.py:
* LayoutTests/platform/glib/TestExpectations:
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/platform/network/NetworkStorageSession.cpp:
(WebCore::NetworkStorageSession::thirdPartyCookieBlockingDecisionForRequest const):
* Source/WebCore/platform/network/NetworkStorageSession.h:
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:
* Source/WebKit/UIProcess/API/C/WKWebsiteDataStoreRef.cpp:
(WKWebsiteDataStoreSetResourceLoadStatisticsShouldBlockThirdPartyCookiesForTesting):
(WKWebsiteDataStoreStatisticsResetToConsistentState):
* Source/WebKit/UIProcess/API/C/WKWebsiteDataStoreRef.h:
* Source/WebKit/UIProcess/API/Cocoa/WKWebsiteDataStore.mm:
(-[WKWebsiteDataStore _setThirdPartyCookieBlockingMode:thirdPartyCookieBlockingMode:completionHandler:]):
(-[WKWebsiteDataStore _setThirdPartyCookieBlockingMode:onlyOnSitesWithoutUserInteraction:completionHandler:]):
* Source/WebKit/UIProcess/API/Cocoa/WKWebsiteDataStoreInternal.h:
* Source/WebKit/UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::addExistingWebPage):
(WebKit::WebProcessProxy::removeWebPage):
* Source/WebKit/UIProcess/WebsiteData/We

--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -5310,6 +5310,9 @@ enum class WebCore::ThirdPartyCookieBlockingMode : uint8_t {
     All,
     AllExceptBetweenAppBoundDomains,
     AllExceptManagedDomains,
+#if HAVE(ALLOW_ONLY_PARTITIONED_COOKIES)
+    AllExceptPartitioned,
+#endif
     AllOnSitesWithoutUserInteraction,
     OnlyAccordingToPerDomainPolicy
 };
