FaceTime video flipped upside-down in Safari call rdar://140305310
Reviewed by Eric Carlson.

Rotation is incorrect on some iPads when this flag is on.
We temporarily disable the flag until we fix that issue for those iPads.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:

Originally-landed-as: fc73a0b209cf. rdar://141317044
Canonical link: https://commits.webkit.org/288178@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -7828,8 +7828,9 @@ UseAVCaptureDeviceRotationCoordinatorAPI:
   condition: HAVE(AVCAPTUREDEVICEROTATIONCOORDINATOR)
   defaultValue:
     WebKit:
-      default: true
-  sharedPreferenceForWebProcess: true
+      # FIXME: Re-enable on visionOS once rdar://139112264 is resolved.
+      "PLATFORM(VISION)": false
+      default: false
 
 UseAsyncUIKitInteractions:
   type: bool
