--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -7831,6 +7831,7 @@ UseAVCaptureDeviceRotationCoordinatorAPI:
       # FIXME: Re-enable on visionOS once rdar://139112264 is resolved.
       "PLATFORM(VISION)": false
       default: false
+  sharedPreferenceForWebProcess: true
 
 UseAsyncUIKitInteractions:
   type: bool
