[GTK] Improve force repaint implementation to reduce the amount of flaky ref tests https://bugs.webkit.org/show_bug.cgi?id=284524
Reviewed by Nikolas Zimmermann.

Many ref tests are flaky because we are not properly taking the snapshot
of either the reference or test. This patch reworks the force repaint
implementation of the GTK port, with some parts also shared with WPE.

This patch includes the following changes:

 - For GTK we try to take the snapshot by using the last committed
   buffer, instead of using GTK API to get the web view rendered
   contents. When not possible for whatever reason, we fall back to
   getting web view rendered contents.
 - Send the DispatchAfterEnsuringDrawing message to the web process to
   make sure we get another frame in the UI process with the frame we
   want. This also allows as to remove the timer in GTK port to wait for
   multiple frames, since now we know the next one is the one we want.
 - To make sure we use the new rendered frame the paint/snapshot
   methods return a bool indicating whether buffers were swapped in that
   paint.
 - In the web process force repaint has been reworked to follow what
   other ports do, calling Page::forceRepaintAllFrames() and then doing
   a synchronous layer flush where a composition is forced. In case of
   async force repaint, we wait for the composition triggered by the
   force repaint (using the composition request ID) to notify back the
   UI process.
 - Resize no longer uses force repaint, it either schedules a new layer
   flush if waiting for the renderer, or does a sync layer flush
   otherwise.
 - We don't really need a sync composition, so ThreadedCompositor::forceRepaint()
   has been removed, since it has always been unimplemented and we don't
   plan to implement it either.
 - GTK run loop priority for accelerated compositing timers (LayerFlush,
   CompositingThreadUpdate and DisplayRefreshMonitor) has been changed
   to be the same as WebCore timers to make sure a WebCore

--- a/Source/WebKit/WebProcess/WebPage/DrawingArea.messages.in
+++ b/Source/WebKit/WebProcess/WebPage/DrawingArea.messages.in
@@ -42,7 +42,9 @@ messages -> DrawingArea {
 
     AcceleratedAnimationDidStart(WebCore::PlatformLayerIdentifier layerID, String key, MonotonicTime startTime)
     AcceleratedAnimationDidEnd(WebCore::PlatformLayerIdentifier layerID, String key)
-    
+#endif
+
+#if PLATFORM(COCOA) || PLATFORM(GTK) || PLATFORM(WPE)
     DispatchAfterEnsuringDrawing() -> () CallWithReplyID
 #endif
 
