Move GCC_WARN_NON_VIRTUAL_DESTRUCTOR to CommonBase.xcconfig <https://bugs.webkit.org/show_bug.cgi?id=285220> <rdar://142127164>
Reviewed by Mike Wyrzykowski.

* Configurations/CommonBase.xcconfig:
(GCC_WARN_NON_VIRTUAL_DESTRUCTOR): Add.
* Source/JavaScriptCore/Configurations/Base.xcconfig:
(GCC_WARN_NON_VIRTUAL_DESTRUCTOR): Delete.
* Source/ThirdParty/gmock/Configurations/Base.xcconfig:
(GCC_WARN_NON_VIRTUAL_DESTRUCTOR): Delete.
* Source/WTF/Configurations/Base.xcconfig:
(GCC_WARN_NON_VIRTUAL_DESTRUCTOR): Delete.
* Source/WebCore/Configurations/Base.xcconfig:
(GCC_WARN_NON_VIRTUAL_DESTRUCTOR): Delete.
* Source/WebCore/PAL/Configurations/Base.xcconfig:
(GCC_WARN_NON_VIRTUAL_DESTRUCTOR): Delete.
* Source/WebCore/PAL/ThirdParty/dav1d/Configurations/Base.xcconfig:
(GCC_WARN_NON_VIRTUAL_DESTRUCTOR): Delete.
* Source/WebGPU/Configurations/Base.xcconfig:
(GCC_WARN_NON_VIRTUAL_DESTRUCTOR): Delete.
* Source/WebInspectorUI/Configurations/Base.xcconfig:
(GCC_WARN_NON_VIRTUAL_DESTRUCTOR): Delete.
* Source/WebKit/Configurations/Base.xcconfig:
(GCC_WARN_NON_VIRTUAL_DESTRUCTOR): Delete.
* Source/WebKitLegacy/mac/Configurations/Base.xcconfig:
(GCC_WARN_NON_VIRTUAL_DESTRUCTOR): Delete.
* Source/bmalloc/Configurations/Base.xcconfig:
(GCC_WARN_NON_VIRTUAL_DESTRUCTOR): Delete.

* Tools/DumpRenderTree/mac/TestRunnerMac.mm:
(TestRunner::~TestRunner):
- Use default.
* Tools/TestRunnerShared/UIScriptContext/UIScriptContext.h:
(WTR::UIScriptContextDelegate::UIScriptContextDelegate): Add.
(WTR::UIScriptContextDelegate::~UIScriptContextDelegate): Add.
- Define default constructor and virtual destructor.
* Tools/TestWebKitAPI/Tests/WTF/WeakPtr.cpp:
(TestWebKitAPI::MultipleInheritanceBase1::MultipleInheritanceBase1): Add.
(TestWebKitAPI::MultipleInheritanceBase1::~MultipleInheritanceBase1): Add.
(TestWebKitAPI::MultipleInheritanceBase2::MultipleInheritanceBase2): Add.
(TestWebKitAPI::MultipleInheritanceBase2::~MultipleInheritanceBase2): Add.
(TestWebKitAPI::MultipleInheritanceDerived::MultipleI

--- a/Configurations/CommonBase.xcconfig
+++ b/Configurations/CommonBase.xcconfig
@@ -1,4 +1,4 @@
-// Copyright (C) 2022-2023 Apple Inc. All rights reserved.
+// Copyright (C) 2022-2024 Apple Inc. All rights reserved.
 //
 // Redistribution and use in source and binary forms, with or without
 // modification, are permitted provided that the following conditions
@@ -58,6 +58,8 @@ OTHER_LDFLAGS = $(inherited) $(WK_COMMON_OTHER_LDFLAGS);
 
 WK_COMMON_OTHER_TAPI_FLAGS = -x objective-c++ -std=c++2b -fno-rtti $(WK_SANITIZER_OTHER_TAPI_FLAGS);
 OTHER_TAPI_FLAGS = $(inherited) $(WK_COMMON_OTHER_TAPI_FLAGS);
+
+GCC_WARN_NON_VIRTUAL_DESTRUCTOR = YES;
 
 WK_COMMON_WARNING_CFLAGS = -Wall -Wc99-designator -Wconditional-uninitialized -Wextra -Wdeprecated-enum-enum-conversion -Wdeprecated-enum-float-conversion -Wenum-float-conversion -Wfinal-dtor-non-final-class -Wformat=2 -Wmisleading-indentation -Wreorder-init-list -Wundef -Wvla;
 WARNING_CFLAGS = $(inherited) $(WK_COMMON_WARNING_CFLAGS) $(WK_SANITIZER_WARNING_CFLAGS);
