Implement WebTransport from a Worker https://bugs.webkit.org/show_bug.cgi?id=284965 rdar://136263473
Reviewed by Youenn Fablet.

A Worker runs code off the main thread, so we need to be extra careful.

The first thing I noticed is that ensureNetworkProcessConnection can only
safely be called from the main thread, so if we are creating a WebTransport
session off the main thread, hop to the main thread, get the connection,
then hop back.  The connection can then be safely used off the main thread.

To make networking fast, especially the sending of datagrams, I send IPC
from the background thread to the network process, which is already safe.
Some of the messages need a reply, and some messages indicate data or streams
were received in the network process, and those messages come from the
network process on the main thread.  To handle the needed thread hopping,
I introduce WorkerWebTransportSession which works as an intermediary between
the WebTransportSession and the WebTransportSessionClient to make sure
everything is safely on the expected thread on both sides.

To make use of m_readStreamSources safe, I needed to change the lookup in
WebTransportSession::streamReceiveBytes into just a client call and have
the WorkerWebTransportSession take care of the thread safety.  That means
I needed to move WebTransportStreamIdentifier to WebCore and have WebCore
keep track of the map of identifier to stream and only access that map on
the proper thread.

I found that I can use WebCore::WebTransportReceiveStreamSource to receive both
data and streams, so I removed WebKit::WebTransportReceiveStreamSource.

* Source/WebCore/Modules/webtransport/WebTransport.cpp:
(WebCore::WebTransport::initializeOverHTTP):
(WebCore::WebTransport::receiveIncomingUnidirectionalStream):
(WebCore::createBidirectionalStream):
(WebCore::WebTransport::receiveBidirectionalStream):
(WebCore::WebTransport::streamReceiveBytes):
(WebCore::WebTransport::cleanup):
(WebCore::WebTransport::createBidirectionalSt

--- a/Source/WebKit/WebProcess/Network/WebTransportSession.messages.in
+++ b/Source/WebKit/WebProcess/Network/WebTransportSession.messages.in
@@ -26,7 +26,7 @@
 ]
 messages -> WebTransportSession {
     ReceiveDatagram(std::span<const uint8_t> datagram)
-    ReceiveIncomingUnidirectionalStream(WebKit::WebTransportStreamIdentifier identifier)
-    ReceiveBidirectionalStream(WebKit::WebTransportStreamIdentifier identifier)
-    StreamReceiveBytes(WebKit::WebTransportStreamIdentifier identifier, std::span<const uint8_t> bytes, bool withFin)
+    ReceiveIncomingUnidirectionalStream(WebCore::WebTransportStreamIdentifier identifier)
+    ReceiveBidirectionalStream(WebCore::WebTransportStreamIdentifier identifier)
+    StreamReceiveBytes(WebCore::WebTransportStreamIdentifier identifier, std::span<const uint8_t> bytes, bool withFin)
 }
