Web processes should only commit history state for navigating frames and their children https://bugs.webkit.org/show_bug.cgi?id=285224 rdar://142134339
Reviewed by Alex Christensen.

Currently, when a frame navigates, the web process creates history state for the entire frame tree to be
committed to the UI process. This needs to change with site isolation because a navigating iframe may
have parent frames that are out-of-process, which we cannot synchronously create history state for.
Instead, when a frame navigates, the web process should only create and commit history state for the
navigating frame and its children. If the navigating frame is a child frame, we can use the current item
in the UI process's back/forward list to populate the history state for its ancestors.

On navigation, only frames that navigate will be assigned a new WebBackForwardListFrameItem, while the
history item tree created for the new navigation will always receive a new WebBackForwardListItem. This
allows the UI process to correctly update the history for isolated iframes that did not navigate but had
a sibling in another process that did.

No change in behavior with site isolation disabled (hopefully). More details below.

* Source/WebCore/Headers.cmake:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/history/BackForwardCache.cpp:
(WebCore::BackForwardCache::addIfCacheable):
(WebCore::BackForwardCache::take):
(WebCore::BackForwardCache::get):
(WebCore::BackForwardCache::remove):
* Source/WebCore/history/BackForwardClient.h:
* Source/WebCore/history/BackForwardController.cpp:
(WebCore::BackForwardController::addItem):
(WebCore::BackForwardController::setChildItem):
* Source/WebCore/history/BackForwardController.h:
* Source/WebCore/history/BackForwardFrameItemIdentifier.h: Added.
* Source/WebCore/history/HistoryItem.cpp:
(WebCore::HistoryItem::HistoryItem):
(WebCore::HistoryItem::isInBackForwardCache const):
(WebCore::HistoryItem::hasCachedPageExpired const):
(WebCore:

--- a/Source/WebKit/Shared/ProcessQualified.serialization.in
+++ b/Source/WebKit/Shared/ProcessQualified.serialization.in
@@ -21,6 +21,7 @@
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 
+additional_forward_declaration: namespace WebCore { using BackForwardFrameItemIdentifierID = ObjectIdentifier<BackForwardFrameItemIdentifierType>; }
 additional_forward_declaration: namespace WebCore { using BackForwardItemIdentifierID = ObjectIdentifier<BackForwardItemIdentifierType>; }
 additional_forward_declaration: namespace WebCore { using DOMCacheIdentifierID = AtomicObjectIdentifier<DOMCacheIdentifierType>; }
 additional_forward_declaration: namespace WebCore { using FrameIdentifierID = ObjectIdentifier<FrameIdentifierType>; }
@@ -33,6 +34,11 @@ additional_forward_declaration: namespace WebCore { using UserGestureTokenIdenti
 additional_forward_declaration: namespace WebCore { using WebLockIdentifierID = AtomicObjectIdentifier<WebLockIdentifierType>; }
 
 header: <WebCore/ProcessQualified.h>
+[Alias=class ProcessQualified<BackForwardFrameItemIdentifierID>, AdditionalEncoder=StreamConnectionEncoder, CustomHeader] alias WebCore::BackForwardFrameItemIdentifier {
+    WebCore::BackForwardFrameItemIdentifierID object();
+    WebCore::ProcessIdentifier processIdentifier();
+};
+
 [Alias=class ProcessQualified<BackForwardItemIdentifierID>, AdditionalEncoder=StreamConnectionEncoder, CustomHeader] alias WebCore::BackForwardItemIdentifier {
     WebCore::BackForwardItemIdentifierID object();
     WebCore::ProcessIdentifier processIdentifier();
